...
  }, []);

  return (
    <SafeAreaContainer>
      <View mt={2}>
        <Title alignSelf="center" fontSize="2xl">
          Check your email
        </Title>
        <View alignSelf="center" flexDirection="row" mt={2}>
          <Text>We've sent an email to </Text>
          <Text color={theme.colors.red[900]} fontWeight="bold">
            {email}
          </Text>
...
