...
          justifyContent="flex-end">
          {!authenticated ? (
            <>
              <View alignItems="center" justifyContent="center" mx={1}>
                <NativeButton
                  size="xs"
                  testID="header-signup-button"
                  variant="outline"
                  onPress={checkSignup}>
                  <Text color={colors.white[900]}>SIGNUP</Text>
                </NativeButton>
              </View>
              <View alignItems="center" justifyContent="center" mx={1}>
...
